--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# IDK if you're supposed to commit appsettings or not but I'll keep it here for now 
+MSMS.Server/appsettings.json
