added settings files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 
 # IDK if you're supposed to commit appsettings or not but I'll keep it here for now 
 ./MSMS.Server/appsettings.json
+./MSMS.Server/appsettings.Development.json
