--- a/.gitignore
+++ b/.gitignore
@@ -398,5 +398,5 @@ FodyWeavers.xsd
 *.sln.iml
 
 # IDK if you're supposed to commit appsettings or not but I'll keep it here for now 
-./MSMS.Server/appsettings.json
-./MSMS.Server/appsettings.Development.json
+appsettings.*
+appsettings.*
