--- a/MSMS.Server/Properties/launchSettings.json
+++ b/MSMS.Server/Properties/launchSettings.json
@@ -26,6 +26,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7183;http://localhost:5128",
+      "hotReloadProfile": "aspnetcore",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
